done of all controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "connstr": "Server=your_server_name;Database=your_db_name;User Id=your_user;Password=your_password;"
+    "connstr": "Server=127.0.0.1;Port=3306;Database=user_management;User ID=root;Password=1234;SslMode=none;"
   },
   "AllowedHosts": "*"
 }
